--- a/UrbanShoes/Web.config
+++ b/UrbanShoes/Web.config
@@ -13,8 +13,7 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-UrbanShoes-20200427035751.mdf;Initial Catalog=aspnet-UrbanShoes-20200427035751;Integrated Security=True"
       providerName="System.Data.SqlClient" />
-    <add name="UrbanShoesContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=UrbanShoesContext-20200528095151; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|UrbanShoesContext-20200528095151.mdf"
-      providerName="System.Data.SqlClient" />
+    <add name="MainStore" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\UrbanShoes.mdf;Initial Catalog=UrbanShoes;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
