--- a/UrbanShoes/UrbanShoes.csproj
+++ b/UrbanShoes/UrbanShoes.csproj
@@ -280,7 +280,6 @@
     <Content Include="Views\Manage\ManageLogins.cshtml" />
     <Content Include="Views\Manage\SetPassword.cshtml" />
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
-    <Content Include="Views\Cart\Index.cshtml" />
     <Content Include="Views\Categories\Create.cshtml" />
     <Content Include="Views\Categories\Delete.cshtml" />
     <Content Include="Views\Categories\Details.cshtml" />
@@ -300,10 +299,11 @@
     <Content Include="Views\ProductImages\Index.cshtml" />
     <Content Include="Views\ProductImages\Upload.cshtml" />
     <Content Include="Views\ProductImages\Delete.cshtml" />
+    <Content Include="Views\Basket\Index.cshtml" />
+    <Content Include="Views\Basket\Summary.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Views\Admin\" />
-    <Folder Include="Views\Basket\" />
     <Folder Include="Views\Errors\" />
     <Folder Include="Views\UserAdmin\" />
   </ItemGroup>
